--- a/css/general.css
+++ b/css/general.css
@@ -26,7 +26,7 @@ img {
 }
 
 body {
-    margin: 0;
+    margin: 0rem 0 0;
     padding: 0;
 }
 
@@ -36,50 +36,83 @@ body {
 }
 
 .logo {
-    height: 2rem;
+    height: 2.25rem;
     width: auto;
     margin: .5rem 5%;
     float: right;
 }
 
+.nav-top {
+	max-height: 0; 
+    background-color: #000033;
+    overflow:hidden;
+
+	-moz-transition: all 250ms linear;
+	-o-transition: all 250ms linear;
+	-webkit-transition: all 250ms linear;
+	transition: all 250ms linear;
+}
+
+.nav-top[data-state="expanded"] {
+	max-height: 9rem;
+}
+
+.nav-top ul { 
+	margin: 0;
+    padding: 1.5rem 0;
+    list-style-type: none;
+}
+
+.nav-top a,
+.nav-top a:link,
+.nav-top a:visited {
+	display: block;
+	font-size: 1.25rem;
+    padding: 1rem 5%;
+	color: white;
+	text-decoration: none;
+}
+
+.nav-btn,
+.nav-btn:link,
+.nav-btn:visited {
+	height: 2rem;
+    width: 2.5rem;
+	overflow: hidden;
+    position: absolute;
+    top: 1rem;
+    left: 5%;
+	background: transparent url("../images/icon-nav.svg") no-repeat 0 0;
+	text-indent: 100%;
+	white-space: nowrap; 
+}
+
 .billboard {
     overflow: hidden;
-    background-image: url(../images/city.jpg);
+    background-image: url(../images/billboard.jpg);
     background-color: black;
     background-repeat: no-repeat;
     background-position: absolute;
     background-size: 100%;
 }
 
-billboard-about {
+.billboard-about {
     overflow: hidden;
     background-image: url(../images/city.jpg);
     background-color: black;
     background-repeat: no-repeat;
     background-position: absolute;
     background-size: 100%;
+    height: 15rem;
 }
 
 .billboard-suits {
     overflow: hidden;
     background-image: url(../images/wine.jpg);
-    background-color: black;
     background-repeat: no-repeat;
-    background-position: absolute;
+    background-position: repeat;
     background-size: 100%;
-}
-
-h1 {
-    position: relative;
-    top: -3rem;
-    font-family: "Didot", "Garamond", serif;
-    font-weight: bold;
-    font-size: 2rem;
-    line-height: 2.5rem;
-    color: white;
-    text-transform: uppercase;
-    padding: 0.25rem 5%;
-    margin: 10rem 0rem; 
+    height: 15rem;
 }
 
 .headline {
@@ -89,24 +122,126 @@ h1 {
     background-color: rgba(204, 204, 153, .4);
 }
 
+.headline-suits {
+    margin: 0;
+    padding: 0;
+    height: 5rem;
+    background-color: rgba(102, 0, 0, .4);
+}
+
+.headline-about {
+    margin: 0;
+    padding: 0;
+    height: 5rem;
+    background-color: rgba(0, 0, 51, .4);
+}
+
+p {
+    margin-top: 0;
+}
+
+h1 {
+    position: relative;
+    top: -3rem;
+    font-family: "Cardo", serif;
+    font-weight: normal;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.25rem 5%;
+    margin: 10rem 0rem; 
+}
+
+.h1suits {
+    position: relative;
+    top: 1rem;
+    font-family: "Cardo", serif;
+    font-weight: normal;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.25rem 5%;
+    margin: 10rem 0rem; 
+}
+
+.h1about {
+    position: relative;
+    top: 1rem;
+    font-family: "Cardo", serif;
+    font-weight: normal;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.25rem 5%;
+    margin: 10rem 0rem; 
+}
+
 h2 {
     margin: 2rem 10%;
-    font: "Didot", "Garamond", serif;
+    font-family: 'Cardo', 'serif';
     font-weight: lighter;
     font-size: 1.5rem;
     font-style:italic;
     text-align: center;
+    color: #000033;
 }
 
-h3 {
-    margin: 1.5rem 10%;
+.subhead {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #993333;
+    margin-bottom: 0;
+}
+
+h5 {
     font: "Didot", "Garamond", serif;
-    font-weight: lighter;
+    font-weight: bold;
     font-size: 1.25rem;
-    font-style:italic;
-    text-align: center;
+    color: #000033;
+    margin-bottom: 0;
+    margin-top: .5rem;
 }
 
+.bucket-links {
+    font: "Didot", "Garamond", serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: white;
+    position: absolute;
+    text-transform: uppercase;
+    top: 5rem;
+    background-color: rgba(0, 0, 51, .6); 
+    padding: .5rem;
+    text-decoration: none;
+}
+
+.buckets {
+    position: relative;
+    size: 50%;
+    display: inline;
+}
+
+.buckets figure {
+    float: left;
+    width: 50%;
+    height: 9rem;
+    overflow: hidden;
+    margin: 0;
+    padding:0 0 4rem;
+}
+
+.details{
+    font-family: "Didot", "Garamond", serif;
+    font-weight: lighter;
+    font-size: 1rem;
+    color: black;
+    margin: .25rem 0 2.5em;
+}
+  
 .burgundy {
     color: #993333;
 }
@@ -116,7 +251,7 @@ h3 {
 }
 
 article {
-    margin: 0;
+    margin:0;
     padding: 0;
 }
 
@@ -124,14 +259,16 @@ article {
     overflow: hidden;
     margin: 0;
     padding: 0 5%;
+    width: 100%;
 }
 
 .social li {
     float: left;
     list-style-type: none;
-    width: 5rem;
-    margin: 10% 5%;
+    width: 4.25rem;
+    margin: 10% 7%;
     padding: 0;
+    display: inline-block;
 }
 
 .social li:last-child {
@@ -145,7 +282,13 @@ article {
 .address {
     text-align: center;
     background-color: beige;
+    padding: 2rem;
 }
+
+.name {
+    font-size: 1rem;
+    color: gray;
+}  
 
 footer {
     margin: 0;
@@ -154,4 +297,94 @@ footer {
     overflow: hidden;
     color: white;
     clear: both;
+}
+
+.left-image {
+    float: left;
+    width: 50%;
+    margin-right: 0.25rem;
+    margin-bottom: 2rem;
+    display: inline;
+}
+
+.buttons {
+    margin: 0;
+    padding: 0;
+    height: 8rem;
+    overflow: hidden;
+}
+
+.left-button {
+    position: relative;
+    float: left;
+    width: 50%;
+    margin: 0;
+    display: inline;
+}
+
+.right-button {
+    position: relative;
+    float: right;
+    width: 50%;
+    margin-left: 0;
+    display: inline;
+}
+
+.pairings {
+    margin: 0;
+    padding: 0;
+    height: 8rem;
+    overflow: hidden;
+}
+
+.pairs {
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 5rem;
+    display: inline;
+    background: gray;
+    padding: 0% 0% 0% 5%;
+}
+
+.left-pair {
+    position: relative;
+    float: left;
+    width: 25%;
+    margin: 0;
+    display: inline;
+}
+
+.right-pair {
+    position: relative;
+    float: left;
+    width: 25%;
+    margin-left: 0;
+    display: inline;
+}
+
+.right-info {
+    float: right;
+    width: 30%;
+    display: inline-block;
+}
+
+.stacked {
+    overflow: hidden;
+    margin: 0 5% 1.5rem;
+    padding: 0;
+}
+
+.stacked img {
+    float: left;
+    width: 45%; 
+    margin: 0 5% 0 0;
+    padding: 0;
+}
+
+.stacked figcaption {
+    float: right;
+    width: 50%;
+    margin: 0;
+    padding: 0;
 }
