--- a/css/general.css
+++ b/css/general.css
@@ -82,7 +82,7 @@ body {
     position: absolute;
     top: 1rem;
     left: 5%;
-	background: transparent url("../images/icon-nav.svg") no-repeat 0 0;
+	background: transparent url("../images/hamburger.svg") no-repeat 0 0;
 	text-indent: 100%;
 	white-space: nowrap; 
 }
