--- a/css/general.css
+++ b/css/general.css
@@ -266,9 +266,9 @@ article {
 .social li {
     float: left;
     list-style-type: none;
-    width: 4.25rem;
-    margin: 10% 7%;
-    padding: 0;
+    width: 30%;
+    margin: 0 5% 0 0;
+    padding: 5%;
     display: inline-block;
 }
 
