--- a/css/general.css
+++ b/css/general.css
@@ -118,9 +118,9 @@ body {
 }
 
 h1 {
-    margin: 10rem 0rem;
-    padding: 0.25rem 5%;
-    top: -2.75rem;
+    margin: 35% 5%;
+    padding: -5% 5%;
+    top: -50%;
     position: relative;
     font-family: "Cardo", serif;
     font-weight: normal;
