--- a/css/general.css
+++ b/css/general.css
@@ -215,6 +215,7 @@ h2 {
 .buckets {
     position: relative;
     width: 50%;
+    height: 9rem;
     display: inline;
 }
 
@@ -224,7 +225,7 @@ h2 {
     height: 9rem;
     overflow: hidden;
     margin: 0;
-    padding:0 0 4rem;
+    padding:0;
 }
  
 .burgundy {
