--- a/css/general.css
+++ b/css/general.css
@@ -204,9 +204,9 @@ h2 {
     font-weight: bold;
     font-size: 1.5rem;
     color: white;
-    position: relative;
+    position: absolute;
     text-transform: uppercase;
-    top: -60%;
+    top: 5rem;
     background-color: rgba(0, 0, 51, .6); 
     padding: .5rem;
     text-decoration: none;
