--- a/css/general.css
+++ b/css/general.css
@@ -131,10 +131,10 @@ h1 {
 }
 
 .h1about {
-    margin: 20% 5%;
-    padding: 5%;
+    margin: 3.5rem 0rem;
+    padding: 0.25rem 5%;
+    top: .75rem;
     position: relative;
-    top: -5%;
     font-family: "Cardo", serif;
     font-weight: normal;
     font-size: 2rem;
