--- a/css/general.css
+++ b/css/general.css
@@ -199,14 +199,14 @@ h2 {
     margin-bottom: 0;
 }
 
-.bucket-links {
+.buckets figcaption {
     font: "Didot", "Garamond", serif;
     font-weight: bold;
     font-size: 1.5rem;
     color: white;
     position: absolute;
     text-transform: uppercase;
-    top: 5rem;
+    top: 4.5rem;
     background-color: rgba(0, 0, 51, .6); 
     padding: .5rem;
     text-decoration: none;
